...
                Button {
                    selectedTag = nil
                    dismiss.callAsFunction()
                } label: {
                    Text(Action.Reset.rawValue)
                }
                .accessibilityIdentifier("resetTagButton")
            }
        }
    }
    
    private func buttonLabel(for tag: CompoundTag) -> some View {
        HStack {
...
