...
                    ToolbarItemGroup {
                        Button {
                            presentMakeSolutionView = true
                        } label: {
                            Image(systemName: "plus")
                        }
                        .accessibilityIdentifier("makeSolutionButton")
                    }
                }
            } detail: {
                if let selectedSolution {
                    NavigationStack {
                        SolutionDetailView(solution: selectedSolution)
...
